GCW-1292 Layout issue for screen wider than 1920px

--- a/app/styles/templates/_package_category.scss
+++ b/app/styles/templates/_package_category.scss
@@ -3,6 +3,9 @@
   @media #{$small-only} {
     height: 6.5rem;
   }
+  @media only screen and (min-width: 120.1em) {
+    margin-left: 4rem !important;
+  }
 }
 
 .items_list {
